opam-version: "2.0"
version: "dev+8.19"
maintainer: "The CertiCoq Team"
homepage: "https://certicoq.org/"
dev-repo: "git+https://github.com/CertiCoq/certicoq"
bug-reports: "https://github.com/CertiCoq/certicoq/issues"
authors: ["Andrew Appel"
          "Yannick Forster"
          "Anvay Grover"
          "Joomy Korkut"
          "John Li"
          "Zoe Paraskevopoulou"
          "Matthieu Sozeau"
          "Matthew Weaver"
          "Abhishek Anand"
          "Greg Morrisett"
          "Randy Pollack"
          "Olivier Savary Belanger"
  ]
license: "MIT"
build: [
  ["bash" "./configure.sh"]
  [make "all"]
  [make "plugins"]
  [make "bootstrap"]
]
install: [
  [make "install"]
]
depends: [
  "ocaml" {>= "4.13"}
  "conf-clang"
  "stdlib-shims"
  "coq" {>= "8.20" & < "8.21~"}
  "coq-compcert" {= "3.13.1"}
  "coq-equations" {= "1.3+8.20"}
  "coq-metacoq-erasure-plugin" {= "1.3.4+8.20"}
  "coq-metacoq-safechecker-plugin" {= "1.3.4+8.20"}
  "coq-ext-lib" {>= "0.12"}
]

synopsis: "A Verified Compiler for Gallina, Written in Gallina "
url {
  git: "https://github.com/CertiCoq/certicoq.git"
}
