opam-version: "2.0"
version: "dev+9.0"
maintainer: "The CertiCoq Team"
homepage: "https://certicoq.org/"
dev-repo: "git+https://github.com/CertiCoq/certicoq"
bug-reports: "https://github.com/CertiCoq/certicoq/issues"
authors: ["Andrew Appel"
          "Yannick Forster"
          "Anvay Grover"
          "Joomy Korkut"
          "John Li"
          "Zoe Paraskevopoulou"
          "Matthieu Sozeau"
          "Matthew Weaver"
          "Abhishek Anand"
          "Greg Morrisett"
          "Randy Pollack"
          "Olivier Savary Belanger"
  ]
license: "MIT"
build: [
  ["bash" "./configure.sh"]
  [make "all"]
  [make "plugins"]
  [make "bootstrap"]
]
install: [
  [make "install"]
]
depends: [
  "ocaml" {>= "4.13"}
  "conf-clang"
  "stdlib-shims"
  "coq" {>= "9.0" & < "9.1~"}
  "coq-compcert" {= "dev"}
  "coq-equations" {= "1.3.1+9.0"}
  "rocq-metarocq-erasure-plugin" {= "1.4+9.0"}
  "rocq-metarocq-safechecker-plugin" {= "1.4+9.0"}
  "coq-ext-lib" {>= "0.12"}
]

synopsis: "A Verified Compiler for Gallina, Written in Gallina "
url {
  git: "https://github.com/CertiCoq/certicoq.git"
}
